--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <button class="btn-grid">New grid</button>
     <div class="container"></div>
 </body>
 </html>
