--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <button class="btn-grid">New grid</button>
-    <div class="container"></div>
+    <div class="mainframe">
+        <div class="controls">
+            <button class="btn-grid">New grid</button>
+            <button class="btn-rainbow">Rainbow mode</button>
+        </div>
+        <div class="container"></div>
+    </div>
 </body>
 </html>
