--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="mainframe">
         <div class="controls">
             <button class="btn-grid">New grid</button>
-            <button class="btn-rainbow">Rainbow mode</button>
+            <button class="btn-rainbow">Rainbow grid</button>
         </div>
         <div class="container"></div>
     </div>
