New style along with some things i think

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <div class="mainframe">
         <div class="controls">
-            <button class="btn-grid">New grid</button>
-            <button class="btn-rainbow">Rainbow grid</button>
+            <div class="controls-top"></div>
+            <div class="controls-body">
+                <div class="controls-actions"> <!-- this sucks -->
+                    <button class="btn-grid">New grid</button>
+                    <button class="btn-rainbow">Rainbow grid</button>
+                </div>
+            </div>
+            <div class="controls-bottom"></div>
         </div>
         <div class="container"></div>
     </div>
