Add range to control canvas border

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <div class="controls-actions"> <!-- this sucks -->
                     <button class="btn-grid">New grid</button>
                     <button class="btn-rainbow">Rainbow grid</button>
+                    <label for="border-radius-range" class="border-radius-label">Border radius</label>
+                    <input id="border-radius-range" type="range" min="0" max="50" value="10">
                 </div>
             </div>
             <div class="controls-bottom"></div>
