Improve input design

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
                 <div class="controls-actions"> <!-- this sucks -->
                     <button class="btn-grid">New grid</button>
                     <button class="btn-rainbow">Rainbow grid</button>
-                    <label for="border-radius-range" class="border-radius-label">Border radius</label>
-                    <input id="border-radius-range" type="range" min="0" max="50" value="2">
-                    <label for="color-picker">Pick a color</label>
-                    <input id="color-picker" type="color">
+                    <div class="brr-div"> <!-- 🥶 -->
+                        <label for="border-radius-range" class="border-radius-label">Border radius</label>
+                        <input id="border-radius-range" type="range" min="0" max="50" value="2">
+                    </div>
+                    <div class="color-pick-div">
+                        <label for="color-picker">Pick a color</label>
+                        <input id="color-picker" type="color">
+                    </div>
                 </div>
             </div>
             <div class="controls-bottom"></div>
